welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:42: error: not found: value result
  return result
         ^