welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  var toggle:Boolean = false
  
  while(!finalPositionReached()){
    
    for (i <- 1 to getWorldHeight()){
      forward()
    }
   	
    if (toggle){
      left()
      forward()
      left()
    } else {
      right()
      forward()
      right()
    }
    
    toggle = !toggle
  }
  
}




def finalPositionReached():Boolean = {
   
  getDirection() match {
    case Direction.EAST => 
    	left() 
    	var result:Boolean = isFacingWall()
    	right()
   
    case Direction.WEST => 
    	right()
    	var result:Boolean = isFacingWall()
    	left()
  }
  
  return result
}